2000-09-18  Dan Espen  <dane@mk.telcordia.com>

	* fvwm24_convert.in: preliminary version.  Not done yet.

2000-08-19  Mikhael Goikhman  <migo@homemail.com>

	* utils/fvwm-menu-desktop.1:
	* utils/fvwm-menu-desktop.in:
	be more quiet; rename --fvwm-gtk-name to --fvwmgtk-alias

2000-05-14  Mikhael Goikhman  <migo@homemail.com>

	* make_fvwmdist.sh:
	s/$VRELEASE_$VMAJOR_VMINOR/${VRELEASE}_${VMAJOR}_$VMINOR/

2000-05-04  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am, fvwmbun.sh.in:
	fixed minor info bug, small rearrangings
	* fvwm-config.in:
	added gnome support query

2000-04-26  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-config.in, fvwmbug.sh.in:
	Changes in defaults of FVWM_DATADIR & FVWM_USERDIR;
	renamings and rewordings.

2000-04-12  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-config.in:
	added --supports, --supports-<feature> options, some enhancements.

2000-04-06  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-config.in:
	a new fvwm script, to be used for querying fvwm instalation

2000-02-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh (VERSION_STRING):
	improved release building script

2000-02-05  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-*.{in,1}:
	some clean up in code and man; ~ in file names is now mostly expanded;
	added --wm-icons; changed to work with Redhat 5.1 perl

	* fvwm-menu-xlock.in:
	actually renamed --format to the previously documented --item,
	--item format now can contain width specifiers like in other scripts;
	renamed --icon to --icon-item, added --icon-title;

	* fvwm-menu-directory.in:
	actually renamed --format to the previously documented --item;
	changed data file name used in --reuse to .fvwm-menu-directory.dir

	* fvwm-menu-headlines.in: timezones of sites are now taken in account,
	still daylight saving time is evaluated approximately for dumb sites
	dumping local time for own zone without specifying it instead of GMC;
	support for AppWatch site, support for user defined sites;