@@ -1,3 +1,8 @@
+2000-09-24  Dan Espen  <dane@mk.telcordia.com>
+
+	* Makefile.am (fvwm24_convert): Rules to build fvwm24_convert.
+	* fvwm24_convert.in: Works for me.  Docs next.
+
 2000-09-18  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm24_convert.in: preliminary version.  Not done yet.
